résolution de problèmes du formulaire d'inscription

--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -7,7 +7,7 @@
         <br>
         <form class="signup-div-form" action="/signup" method="post">
           <label for="firstname">Prénom:</label>
-          <input type="text" id="firstname" name="firstname">
+          <input type="text" id="firstname" name="firstname" required>
           <label for="lastname">Nom:</label>
           <input type="text" id="lastname" name="lastname" required>
           <label for="email">Email:</label>
