Huge update.Sorry for huge commit. Need sleep. Good night ZzzZz.

--- a/app/views/mentions.ejs
+++ b/app/views/mentions.ejs
@@ -1,30 +1,36 @@
-<%- include('./partials/header-nav') %>
+<%- include('./partials/head') %>
 
-<main class="mentions">
-  <div class="mentions-div">
-    <h1 class="mentions-div-h1">MENTIONS LÉGALES</h1>
-    <section class="mentions-div-section">
-      <h2>Ambulance X</h2>
-      <p class="mentions-div-p">
-        XX rue sans fin<br/>
-        35400 SAINT-MALO<br/>
-        France<br/>
-        <br>
-        Tel : 02.XX.XX.XX.XX<br/>
-        <br>
-        e-mail : contact@ambulanceX.com<br/>
-        <br>
-        Site internet : www.ambulanceX.com<br/>
-        <br>
-        Capital Social : €<br/>
-        Représentantes autorisées : Madame X, Madame X<br/>
-        N° Registre du commerce ou Répertoire des métiers : <br> 
-        XXX XXX XXX RCS Saint-Malo<br />
-        N°SIRET de l'établissement : XXX XXX XXX XXXXX<br/>
-        N° d’assujettissement à la TVA : FRXXXXXXXXXXXX<br/>
-      </p>
-    </section>
-  </div>
-</main>
+  <body>
+    <%- include('./partials/header-nav') %>
 
-<%- include('./partials/footer') %>
+      <main class="mentions">
+        <div class="mentions-div">
+          <h1 class="mentions-div-h1">MENTIONS LÉGALES</h1>
+          <section class="mentions-div-section">
+            <h2>Ambulance X</h2>
+            <p class="mentions-div-p">
+              XX rue sans fin<br />
+              35400 SAINT-MALO<br />
+              France<br />
+              <br>
+              Tel : 02.XX.XX.XX.XX<br />
+              <br>
+              e-mail : contact@ambulanceX.com<br />
+              <br>
+              Site internet : www.ambulanceX.com<br />
+              <br>
+              Capital Social : €<br />
+              Représentantes autorisées : Madame X, Madame X<br />
+              N° Registre du commerce ou Répertoire des métiers : <br>
+              XXX XXX XXX RCS Saint-Malo<br />
+              N°SIRET de l'établissement : XXX XXX XXX XXXXX<br />
+              N° d’assujettissement à la TVA : FRXXXXXXXXXXXX<br />
+            </p>
+          </section>
+        </div>
+      </main>
+
+      <%- include('./partials/footer') %>
+  </body>
+
+  </html>
