--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,10 +1,12 @@
-    <footer>
-      <div class="footer">
-        <form action="../mentions">
-          <button class="footer-button">MENTIONS LÉGALES</button>
-        </form>
-      </div>
-    </footer>
+<footer>
+  <div class="footer">
+    <!-- COMMENTAIRE : pourquoi un élément <form> ici alors qu'il s'agit simplement d'un bouton ? une balise <a> suffirait amplement -->
+    <form action="/mentions" method="get">
+      <button class="footer-button">MENTIONS LÉGALES</button>
+    </form>
   </div>
+</footer>
+</div>
 </body>
+
 </html>
