--- a/app/views/transports.ejs
+++ b/app/views/transports.ejs
@@ -1,45 +1,56 @@
-<%- include('./partials/header-nav') %>
+<%- include('./partials/head') %>
 
-<main class="transports">
-      <div class="transports-div">
-        <h1 class="transports-div-h1"> <u>Les Transports</u> </h1>
-        <h2 class="transports-div-h2">Nos prestations</h2>
-        <ul class="transports-div-ul">
-          <li class="transports-div-li">Entrées et sorties d'hospitalisation</li> 
-          <li class="transports-div-li">Hospitalisation de jour (ambulatoire, chimiothérapie, rééducation fonctionnelle…)</li>
-          <li class="transports-div-li">Consultations</li>
-          <li class="transports-div-li">Transports en série (kinésithérapie, radiothérapie, dialyse, orthophoniste, CMP, CATTP...)</li>
-          <li class="transports-div-li">Transports d’enfants vers les différents centres médicaux</li>
-          <li class="transports-div-li">Urgences (SMUR, centre 15)</li>
-          <li class="transports-div-li">Assistances</li>
-          <li class="transports-div-li">Transports longues distances</li>
-        </ul>
-        <h2 class="transports-div-h2">Les conditions de prise en charge </h2>
-        <p class="transports-div-p">
-          Les transports sont remboursables dès lors que le patient détient une Prescription Médicale de Transport (PMT) <br>
-          Sont légalement remboursables, les transports en :
-        </p>
-        <ul class="transports-div-ul">
-          <li class="transports-div-li">Ambulance</li>
-          <li class="transports-div-li">rapport avec une Affection de Longue Durée (ALD exo et non exonérante)</li>
-          <li class="transports-div-li">rapport avec ses soins continus de plus de 6 mois (art 324.1)</li>
-          <li class="transports-div-li">rapport avec une hospitalisation</li>
-          <li class="transports-div-li">rapport avec un AT (Accident de Travail) dès l'instant où ils sont reconnus par la Sécurité Sociale</li>
-          <li class="transports-div-li">rapport avec une MP (Maladie professionnelle) dès l'instant où elles sont reconnues par la Sécurité Sociale</li>
-        </ul>
-        <h2 class="transports-div-h2">Une demande d'accord préalable doit être faite auprès de la caisse pour :</h2>
-        <ul class="transports-div-ul">
-          <li class="transports-div-li">Les transports vers un lieu distant de plus de 150 kms</li>
-          <li class="transports-div-li">Les transports en série à partir de 50 kms, sans lien avec une ALD</li>
-        </ul>
-        <br>
-        <h2 class="transports-div-h2">
-          Pour être sûr de la prise en charger de vos transports, <br>
-          Consultez-nous : <br>
-          Nous saurons vous renseigner !!!
-        </h2>
-      </div>
-    </main>
+  <body>
+    <%- include('./partials/header-nav') %>
 
-<%- include('./partials/footer') %>
- 
+      <main class="transports">
+        <div class="transports-div">
+          <h1 class="transports-div-h1"> <u>Les Transports</u> </h1>
+          <h2 class="transports-div-h2">Nos prestations</h2>
+          <ul class="transports-div-ul">
+            <li class="transports-div-li">Entrées et sorties d'hospitalisation</li>
+            <li class="transports-div-li">Hospitalisation de jour (ambulatoire, chimiothérapie, rééducation
+              fonctionnelle…)</li>
+            <li class="transports-div-li">Consultations</li>
+            <li class="transports-div-li">Transports en série (kinésithérapie, radiothérapie, dialyse, orthophoniste,
+              CMP, CATTP...)</li>
+            <li class="transports-div-li">Transports d’enfants vers les différents centres médicaux</li>
+            <li class="transports-div-li">Urgences (SMUR, centre 15)</li>
+            <li class="transports-div-li">Assistances</li>
+            <li class="transports-div-li">Transports longues distances</li>
+          </ul>
+          <h2 class="transports-div-h2">Les conditions de prise en charge </h2>
+          <p class="transports-div-p">
+            Les transports sont remboursables dès lors que le patient détient une Prescription Médicale de Transport
+            (PMT) <br>
+            Sont légalement remboursables, les transports en :
+          </p>
+          <ul class="transports-div-ul">
+            <li class="transports-div-li">Ambulance</li>
+            <li class="transports-div-li">rapport avec une Affection de Longue Durée (ALD exo et non exonérante)</li>
+            <li class="transports-div-li">rapport avec ses soins continus de plus de 6 mois (art 324.1)</li>
+            <li class="transports-div-li">rapport avec une hospitalisation</li>
+            <li class="transports-div-li">rapport avec un AT (Accident de Travail) dès l'instant où ils sont reconnus
+              par la Sécurité Sociale</li>
+            <li class="transports-div-li">rapport avec une MP (Maladie professionnelle) dès l'instant où elles sont
+              reconnues par la Sécurité Sociale</li>
+          </ul>
+          <h2 class="transports-div-h2">Une demande d'accord préalable doit être faite auprès de la caisse pour :</h2>
+          <ul class="transports-div-ul">
+            <li class="transports-div-li">Les transports vers un lieu distant de plus de 150 kms</li>
+            <li class="transports-div-li">Les transports en série à partir de 50 kms, sans lien avec une ALD</li>
+          </ul>
+          <br>
+          <h2 class="transports-div-h2">
+            Pour être sûr de la prise en charger de vos transports, <br>
+            Consultez-nous : <br>
+            Nous saurons vous renseigner !!!
+          </h2>
+        </div>
+      </main>
+
+      <%- include('./partials/footer') %>
+
+  </body>
+
+  </html>
