--- a/app/views/404.ejs
+++ b/app/views/404.ejs
@@ -1,10 +1,26 @@
-<%- include('./partials/header-nav') %>
-      
-<main class="Page404">
-  <div class="Page404-div">
-    <h1>Oups, tu es perdu/ue ???</h1>
-    <p>La sortie, c'est par <a href="/">là</a>!</p>
-  </div>
-</main>
+<!DOCTYPE html>
+<html lang="en">
 
-<%- include('./partials/footer') %>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/<%= cssFile %>.css">
+  <title>
+    <%= pageTitle %>
+  </title>
+</head>
+
+<body>
+  <%- include('./partials/header-nav') %>
+
+    <main class="Page404">
+      <div class="Page404-div">
+        <h1>Oups, tu es perdu/ue ???</h1>
+        <p>La sortie, c'est par <a href="/">là</a>!</p>
+      </div>
+    </main>
+
+    <%- include('./partials/footer') %>
+</body>
+
+</html>
