--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -1,11 +1,15 @@
-<%- include('./partials/header-nav') %>
+<%- include('./partials/head') %>
 
-<main class="contact">
+  <body>
+
+    <%- include('./partials/header-nav') %>
+
+      <main class="contact">
         <div class="contact-div">
-          <h1 class="contact-div-h1" >LE SAVIEZ-VOUS ?</h1>
+          <h1 class="contact-div-h1">LE SAVIEZ-VOUS ?</h1>
           <br>
           <p class="contact-div-p">
-            PAR DÉCISION MINISTÉRIELLE DU 24/04/1968, <br> 
+            PAR DÉCISION MINISTÉRIELLE DU 24/04/1968, <br>
             VOUS AVEZ LE LIBRE CHOIX DE VOTRE AMBULANCIER <br>
             EXIGEZ-LE SURTOUT LORS DE VOS ENTRÉES ET SORTIES D'HOSPITALISATION ! <br>
           </p>
@@ -20,7 +24,7 @@
           </p>
         </div>
         <div class="contact-div">
-          <h1 class="contact-div-h1" >CONTACT</h1>
+          <h1 class="contact-div-h1">CONTACT</h1>
           <br>
           <form class="contact-div-form" action="https://formspree.io/f/xdoqggdo" method="POST">
             <label>
@@ -43,6 +47,10 @@
             <button type="submit">Envoyer</button>
           </form>
         </div>
-    </main>
+      </main>
 
-<%- include('./partials/footer') %>
+      <%- include('./partials/footer') %>
+
+  </body>
+
+  </html>
