--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,19 +1,26 @@
-<%- include('./partials/header-nav') %>
+<%- include('./partials/head') %>
+
+  <body>
+    <%- include('./partials/header-nav') %>
 
 
-<main class="login">
-      <div class="login-div">
-        <h1><u>Connexion</u></h1>
-        <br>
-        <form class="login-div-form" action="./login" method="post">
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required>
-          <label for="password">Password:</label>
-          <input type="password" id="password" name="password" required>
+      <main class="login">
+        <div class="login-div">
+          <h1><u>Connexion</u></h1>
           <br>
-          <input type="submit" value="Login">
-        </form>
-      </div>
-    </main>
+          <form class="login-div-form" action="./login" method="post">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <br>
+            <input type="submit" value="Login">
+          </form>
+        </div>
+      </main>
 
-<%- include('./partials/footer') %>
+      <%- include('./partials/footer') %>
+
+  </body>
+
+  </html>
