modification des partials pour affichage correct + remplacement d'un 'form'par 'a'

--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,12 +1,10 @@
-<footer>
-  <div class="footer">
-    <!-- COMMENTAIRE : pourquoi un élément <form> ici alors qu'il s'agit simplement d'un bouton ? une balise <a> suffirait amplement -->
-    <form action="/mentions" method="get">
-      <button class="footer-button">MENTIONS LÉGALES</button>
-    </form>
-  </div>
-</footer>
-</div>
-</body>
+      <footer>
+        <div class="footer">
+         <a class="footer-button" href="/mentions">Mentions Légales</a>
+        </div>
+      </footer>
+    </div>
+
+  </body>
 
 </html>
