résolution de problèmes d'affichage

--- a/app/public/css/contact.css
+++ b/app/public/css/contact.css
@@ -18,7 +18,8 @@
   border: solid black 0.1em;
   border-radius: 1em;
   padding-top: 1em;
-  gap: 0.5em;
+  margin: 1em;
+  gap: 1em;
   width: 50%;
   height: 50%;
 }
