--- a/app/views/404.ejs
+++ b/app/views/404.ejs
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('./partials/head') %>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/<%= cssFile %>.css">
-  <title>
-    <%= pageTitle %>
-  </title>
-</head>
-
-<body>
   <%- include('./partials/header-nav') %>
 
     <main class="Page404">
@@ -19,8 +8,5 @@
         <p>La sortie, c'est par <a href="/">là</a>!</p>
       </div>
     </main>
-
-    <%- include('./partials/footer') %>
-</body>
-
-</html>
+    
+  <%- include('./partials/footer') %>
