--- a/app/views/account.ejs
+++ b/app/views/account.ejs
@@ -1,14 +1,14 @@
-<%- include('./partials/header-nav') %>
+<%- include('./partials/head') %>
 
-<main>
-  <div class="account">
-    <section class="account-section">
-      <h2>Informations sur l'utilisateur</h2>
-      <p>Nom: <span id="user-lastname">seb</span></p>
-      <p>Prénom: <span id="user-firstname">fcx</span></p>
-      <p>Email: <span id="user-email">sebfcx@gmail.com</span></p>
-    </section>
-  </div>
-</main>
-
-<%- include('./partials/footer') %> 
+  <%- include('./partials/header-nav') %>
+    <main>
+      <div class="account">
+        <section class="account-section">
+          <h2>Informations sur l'utilisateur</h2>
+          <p>Nom: <span id="user-lastname">seb</span></p>
+          <p>Prénom: <span id="user-firstname">fcx</span></p>
+          <p>Email: <span id="user-email">sebfcx@gmail.com</span></p>
+        </section>
+      </div>
+    </main>
+  <%- include('./partials/footer') %> 
