--- a/app/views/partials/header-nav.ejs
+++ b/app/views/partials/header-nav.ejs
@@ -5,12 +5,8 @@
       <img class="header-img" src="images/caduceeAmbulancier.jpeg" alt="Caducée Ambulancier">
       <h1 class="header-h1">Ambulance X</h1>
       <section class="header-section">
-        <form action="/login" method="post">
-          <button class="header-button">S'identifier</button>
-        </form>
-        <form action="/signup" method="post">
-          <button class="header-button">S'enregistrer</button>
-        </form>
+        <a class="header-button" href="/login">S'identifier</a>
+        <a class="header-button" href="/signup">S'enregistrer</a>
       </section>
     </div>
   </header>
