Update some files

--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -8,7 +8,7 @@
         <div class="login-div">
           <h1><u>Connexion</u></h1>
           <br>
-          <form class="login-div-form" action="./login" method="post">
+          <form class="login-div-form" action="/login" method="post">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
             <label for="password">Password:</label>
