--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -19,6 +19,8 @@ body {
   color: red;
 }
 
+
+
 /* GRID */
 
 .container {
@@ -28,22 +30,28 @@ body {
   width: 100vw;
   height: 100vh;
 }
+
 header {
   grid-row: 1 / 2;
   grid-column: 2 / 4;
 }
+
 nav {
   grid-row: 2 / 3;
   grid-column: 1 / 2;
 }
+
 main {
   grid-row: 2 / 3;
   grid-column: 2 / 4;
 }
+
 footer {
   grid-row: 3 / -1;
   grid-column: -2 / -1;
 }
+
+
 
 /* HEADER */
 
@@ -53,10 +61,12 @@ footer {
   justify-content: space-around;
   align-items: center;
 }
+
 .header-img {
   width: 11em;
   height: 11em;
 }
+
 .header-h1 {
   font-size: 6em;
   color: white;
@@ -65,10 +75,18 @@ footer {
   border-radius: 0.3em;
   padding: 0.2em;
 }
-.header-button {
+
+.header-section{
+  display: flex;
+  flex-direction: column;
+}
+
+.header-a {
   margin: 0.5em;
   cursor: pointer;
 }
+
+
 
 /* NAV */
 
@@ -80,6 +98,7 @@ footer {
   align-items: center;
   gap: 5em;
 }
+
 .nav-a {
   font-size: 2em;
   background-color: rgb(211, 207, 207);
@@ -89,6 +108,8 @@ footer {
   padding: 0.3em;
 }
 
+
+
 /* FOOTER */
 
 .footer {
@@ -97,6 +118,7 @@ footer {
   align-items: center;
   height: 100%;
 }
+
 .footer-button {
   font-size: 1.5em;
   background-color: antiquewhite;
