--- a/app/views/partials/header-nav.ejs
+++ b/app/views/partials/header-nav.ejs
@@ -4,21 +4,16 @@
       <img class="header-img" src="images/caduceeAmbulancier.jpeg" alt="Caducée Ambulancier">
       <h1 class="header-h1">Ambulance X</h1>
       <section class="header-section">
-        <form action="/login" method="post">
-          <button class="header-button">S'identifier</button>
-        </form>
-        <form action="/signup" method="post">
-          <button class="header-button">S'enregistrer</button>
-        </form>
+        <a class="header-a" href="/login">S'identifier</a>
+        <a class="header-a" href="/signup">S'enregistrer</a>
       </section>
     </div>
-    <nav>
-      <div class="nav">
-        <a class="nav-a" href="/">Accueil</a>
-        <a class="nav-a" href="/transports">Transports</a>
-        <a class="nav-a" href="/vehicules">Véhicules</a>
-        <a class="nav-a" href="/contact">Contact</a>
-      </div>
-    </nav>
   </header>
-</div>
+  <nav>
+    <div class="nav">
+      <a class="nav-a" href="/">Accueil</a>
+      <a class="nav-a" href="/transports">Transports</a>
+      <a class="nav-a" href="/vehicules">Véhicules</a>
+      <a class="nav-a" href="/contact">Contact</a>
+    </div>
+  </nav>
