Modification des variables env

--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,9 +1,6 @@
 <footer>
   <div class="footer">
-    <!-- COMMENTAIRE : pourquoi un élément <form> ici alors qu'il s'agit simplement d'un bouton ? une balise <a> suffirait amplement -->
-    <form action="/mentions" method="get">
-      <button class="footer-button">MENTIONS LÉGALES</button>
-    </form>
+    <a class="footer-button" href="/mentions">MENTIONS LÉGALES</a>
   </div>
 </footer>
 </div>
