--- a/app/public/css/contact.css
+++ b/app/public/css/contact.css
@@ -1,27 +1,27 @@
 /* MAIN -CONTACT- */
 
 .contact {
-  display: flex;
-  justify-content: center;
   align-items: center;
   background-image: url(../images/accueil-v2.jpeg);
   background-size: cover;
+  display: flex;
+  justify-content: center;
 }
 
 .contact-div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-  text-align: center;
-  font-size: 1.7em;
   background-color: aliceblue;
   border: solid black 0.1em;
   border-radius: 1em;
-  padding-top: 1em;
-  gap: 0.5em;
-  width: 50%;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.7em;
+  margin: 0.5em;
   height: 50%;
+  justify-content: center;
+  padding-top: 1em;
+  text-align: center;
+  width: 50%;
 }
 
 .contact-div-h1 {
@@ -33,7 +33,7 @@
 .contact-div-form {
   display: flex;
   flex-direction: column;
-  text-align: left;
   gap: 1em;
   padding: 0.5em;
+  text-align: left;
 }
