--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -9,14 +9,14 @@ html {
 }
 
 body {
+  background-color: whitesmoke;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", "Arial, sans-serif";
-  background-color: whitesmoke;
 }
 
 .alert {
-  font-size: 3em;
   color: red;
+  font-size: 3em;
 }
 
 
@@ -25,30 +25,30 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: 13rem 1fr;
-  grid-template-rows: 13rem 1fr 3rem;
-  width: 100vw;
+  grid-template-columns: 1fr;
+  grid-template-rows: 13em 5em 1fr 3em;
   height: 100vh;
+  width: 100vw;
 }
 
 header {
+  grid-column: 1;
   grid-row: 1 / 2;
-  grid-column: 2 / 4;
 }
 
 nav {
+  grid-column: 1;
   grid-row: 2 / 3;
-  grid-column: 1 / 2;
 }
 
 main {
-  grid-row: 2 / 3;
-  grid-column: 2 / 4;
+  grid-column: 1;
+  grid-row: 3 / 4;
 }
 
 footer {
-  grid-row: 3 / -1;
-  grid-column: -2 / -1;
+  grid-column: 1;
+  grid-row: 4 / -1;
 }
 
 
@@ -56,23 +56,23 @@ footer {
 /* HEADER */
 
 .header {
-  height: 100%;
-  display: flex;
-  justify-content: space-around;
   align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: space-around;
 }
 
 .header-img {
-  width: 11em;
   height: 11em;
+  width: 11em;
 }
 
 .header-h1 {
-  font-size: 6em;
-  color: white;
   background-color: rgb(91, 91, 239);
   border: solid 0.1em black;
   border-radius: 0.3em;
+  color: white;
+  font-size: 6em;
   padding: 0.2em;
 }
 
@@ -82,8 +82,9 @@ footer {
 }
 
 .header-a {
-  margin: 0.5em;
+  color: black;
   cursor: pointer;
+  margin: 0.5em;
 }
 
 
@@ -91,20 +92,19 @@ footer {
 /* NAV */
 
 .nav {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  display: flex;
   gap: 5em;
+  height: 100%;
+  justify-content: space-around;
 }
 
 .nav-a {
-  font-size: 2em;
   background-color: rgb(211, 207, 207);
-  color: royalblue;
   border: solid 0.1em black;
   border-radius: 1em;
+  color: royalblue;
+  font-size: 2em;
   padding: 0.3em;
 }
 
@@ -113,15 +113,16 @@ footer {
 /* FOOTER */
 
 .footer {
-  display: flex;
-  justify-content: center;
   align-items: center;
+  display: flex;
   height: 100%;
+  justify-content: center;
 }
 
-.footer-button {
-  font-size: 1.5em;
+.footer-a {
   background-color: antiquewhite;
-  padding: 0.1em;
+  color: black;
   cursor: pointer;
+  font-size: 1.5em;
+  padding: 0.1em;
 }
