--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
   <div class="footer">
-    <a class="footer-button" href="/mentions">MENTIONS LÉGALES</a>
+    <a class="footer-a" href="/mentions">MENTIONS LÉGALES</a>
   </div>
 </footer>
 </div>
