--- a/app/public/css/contact.css
+++ b/app/public/css/contact.css
@@ -5,35 +5,44 @@
   background-image: url(../images/accueil-v2.jpeg);
   background-size: cover;
   display: flex;
+  flex-direction: column;
+  gap: 5em;
   justify-content: center;
 }
 
 .contact-div {
   align-items: center;
   background-color: aliceblue;
-  border: solid black 0.1em;
-  border-radius: 1em;
+  border: solid black 0.5em;
+  border-radius: 2em;
   display: flex;
   flex-direction: column;
-  font-size: 1.7em;
-  margin: 0.5em;
-  height: 50%;
+  gap: 2em;
   justify-content: center;
-  padding-top: 1em;
-  text-align: center;
+  padding: 2em;
   width: 50%;
 }
 
 .contact-div-h1 {
   background-color: white;
   border: solid black 0.1em;
-  padding: 0.1em;
+  padding: 0.3em;
 }
 
 .contact-div-form {
   display: flex;
   flex-direction: column;
+  font-size: 1.5em;
   gap: 1em;
-  padding: 0.5em;
+  line-height: 2em;
   text-align: left;
+}
+
+.contact-div-p {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5em;
+  gap: 2em;
+  line-height: 2em;
+  text-align: center;
 }
