--- a/app/public/css/signup.css
+++ b/app/public/css/signup.css
@@ -11,20 +11,23 @@
 .signup-div {
   align-items: center;
   background-color: aliceblue;
-  border: solid black 0.1em;
-  border-radius: 1em;
+  border: solid black 0.5em;
+  border-radius: 2em;
   display: flex;
   flex-direction: column;
-  font-size: 1.5em;
-  gap: 0.3em;
-  height: 50%;
-  justify-content: center;
-  text-align: center;
-  width: 50%;
+  font-size: 2em;
+  gap: 3em;
+  padding: 3em;
 }
 
 .signup-div-form {
   display: flex;
   flex-direction: column;
-  gap: 0.5em;
+  line-height: 2.5em;
+  text-align: left;
+}
+
+.signup-div-input {
+  font-weight: bold;
+  padding: 0.3em;
 }
