--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -1,52 +1,49 @@
 <%- include('./partials/head') %>
 
-  <body>
+<%- include('./partials/header-nav') %>
+  
+<main class="contact">
 
-    <%- include('./partials/header-nav') %>
+  <div class="contact-div">
+    <h1 class="contact-div-h1">LE SAVIEZ-VOUS ?</h1>
+    <p class="contact-div-p">
+      PAR DÉCISION MINISTÉRIELLE DU 24/04/1968,<br>
+      VOUS AVEZ LE LIBRE CHOIX DE VOTRE AMBULANCIER <br>
+      EXIGEZ-LE SURTOUT LORS DE VOS ENTRÉES ET SORTIES D'HOSPITALISATION !
+      <u><b>Pour plus de renseignements :</b></u>
+      Contactez-nous en priorité au :
+      <br>
+      02.XX.XX.XX.XX
+      <br>
+      Courriel :
+      <br>
+      contact@ambulanceX.com
+    </p>
+  </div>
 
-      <main class="contact">
-        <div class="contact-div">
-          <h1 class="contact-div-h1">CONTACT</h1>
-          <br>
-          <form class="contact-div-form" action="/contact" method="POST">
-            <label>
-              Nom:
-              <input type="text" name="Nom">
-            </label>
-            <label>
-              Prénom:
-              <input type="text" name="Prénom">
-            </label>
-            <label>
-              Email:
-              <input type="email" name="email">
-            </label>
-            <label>
-              Votre message:
-              <textarea name="message"></textarea>
-            </label>
-            <br>
-            <button type="submit">Envoyer</button>
-          </form>
-        </div>
-        <div class="contact-div">
-          <h1 class="contact-div-h1">LE SAVIEZ-VOUS ?</h1>
-          <br>
-          <p class="contact-div-p">
-            PAR DÉCISION MINISTÉRIELLE DU 24/04/1968, <br>
-            VOUS AVEZ LE LIBRE CHOIX DE VOTRE AMBULANCIER <br>
-            EXIGEZ-LE SURTOUT LORS DE VOS ENTRÉES ET SORTIES D'HOSPITALISATION ! <br>
-          </p>
-          <br>
-          <p class="contact-div-p">
-            <u>Pour plus de renseignements :</u> <br>
-            <br>
-            Contactez-nous en priorité au 02.XX.XX.XX.XX <br>
-            <br>
-            Courriel : <br>
-            contact@ambulanceX.com
-          </p>
-        </div>
-      </main>
+  <div class="contact-div">
+    <h1 class="contact-div-h1">CONTACT</h1>
+    <form class="contact-div-form" action="/contact" method="POST">      
+      <label>
+        Nom:
+        <input type="text" name="Nom">
+      </label>      
+      <label>
+        Prénom:
+        <input type="text" name="Prénom">
+      </label>      
+      <label>
+        Email:
+        <input type="email" name="email">
+      </label>      
+      <label>
+        Votre message:
+        <textarea name="message"></textarea>
+      </label>      
+      <button type="submit">Envoyer</button>
+    </form>
+  </div>
 
-    <%- include('./partials/footer') %>
+</main>
+
+<%- include('./partials/footer') %>
