--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 
 <html lang="fr">
+  
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' 'unsafe-eval';">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/<%= cssFile %>">
     <link rel="stylesheet" href="/css/mediaqueries.css">
     <title>
       <%= pageTitle %>
     </title>
+
   </head>
