--- a/app/public/css/login.css
+++ b/app/public/css/login.css
@@ -15,19 +15,21 @@
   border-radius: 2em;
   display: flex;
   flex-direction: column;
-  font-size: 2em;
-  gap: 3em;
+  font-size: 1.5em;
+  gap: 2em;
   padding: 3em;
 }
 
 .login-div-form {
   display: flex;
   flex-direction: column;
+  gap: 1em;
   line-height: 2.5em;
   text-align: left;
 }
 
 .login-div-input {
+  align-self: center;
   font-weight: bold;
-  padding: 0.3em;
+  padding: 0.2em;
 }
