--- a/app/public/css/signup.css
+++ b/app/public/css/signup.css
@@ -15,19 +15,22 @@
   border-radius: 2em;
   display: flex;
   flex-direction: column;
-  font-size: 2em;
-  gap: 3em;
+  font-size: 1.5em;
+  gap: 2em;
   padding: 3em;
 }
 
 .signup-div-form {
   display: flex;
   flex-direction: column;
+  gap: 1em;
   line-height: 2.5em;
   text-align: left;
 }
 
 .signup-div-input {
+  align-self: center;
   font-weight: bold;
   padding: 0.3em;
+  width: 50%;
 }
