--- a/app/views/account.ejs
+++ b/app/views/account.ejs
@@ -3,44 +3,47 @@
 <%- include('./partials/header-nav') %>
 
 <main class="account">
-
-  <h1 class="account-title">Gestion de compte</h1>
-
   <div class="account-div">
     
-    <h2>Informations de compte :<h2>
+    <h1 class="account-div-h1">Gestion de compte</h1>
+
+    <h2 class="account-div-h2">
+      <u>Informations de compte :</u>
+    <h2>
       
+    <section class="account-div-section">
       <label for="firstname">
-        <u>Prénom :</u>
+        Prénom :
       </label>
-      <p>Jojo</p>
       <label for="lastname">
-        <u>Nom :</u>
+        Nom :  
       </label>
-      <p>Lasticot</p>
       <label for="email">
-        <u>Courriel :</u>
+        Courriel : 
       </label>
-      <p>jojolasticot@gmail.com</p>
+    </section>
 
-  </div>
-    
-  <div class="account-div">
+    <h2 class="account-div-h2">
+      <u>Modification de mot de passe :</u>
+    </h2>
 
-    <h2>Modification de mot de passe</h2>
-
-    <form action="/change-password" method="post">
-      <label for="current-password">Mot de passe actuel:</label>
-      <input type="password" id="current-password" name="current-password" required><br>
-      <label for="new-password">Nouveau mot de passe:</label>
-      <input type="password" id="new-password" name="new-password" required><br>
-      <label for="confirm-new-password">Confirmer le nouveau mot de passe:</label>
-      <input type="password" id="confirm-new-password" name="confirm-new-password" required><br>
-      <input type="submit" value="Changer le mot de passe">
+    <form class="account-div-form" action="/account" method="post">
+      <label for="currentPassword">
+        <u>Mot de passe actuel</u>:
+        <input type="password" id="currentPassword" name="currentPassword" required>
+      </label>
+      <label for="newPassword">
+        <u>Nouveau mot de passe</u>:
+        <input type="password" id="newPassword" name="newPassword" required>
+      </label>
+      <label for="confirmNewPassword">
+        <u>Confirmer le nouveau mot de passe</u>:
+        <input type="password" id="confirmNewPassword" name="confirmNewPassword" required>
+      </label>
+      <input class="account-div-input" type="submit" value="Valider">
     </form>
-    
-  </div>
 
+  </div>
 </main>
 
 <%- include('./partials/footer') %> 
