--- a/app/public/css/accueil.css
+++ b/app/public/css/accueil.css
@@ -2,27 +2,24 @@
 
 .accueil {
   align-items: center;
-  background-image: url(../images/accueil-v2.jpeg);
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-}
-
-.accueil-div {
-  align-items: center;
-  backdrop-filter: blur(1em);
+  backdrop-filter: blur(3em);
   border-radius: 1em;
   color: white;
   display: flex;
   flex-direction: column;
-  font-size: 2em;
-  gap: 0.5em;
+  gap: 2em;
   justify-content: center;
-  padding: 0.3em;
-  text-align: center;
-  -webkit-backdrop-filter: blur(1em);
+  padding: 0.5em;
+  -webkit-backdrop-filter: blur(3em);
 }
 
-.accueil-div-li {
-  text-align: left;
+.accueil-section {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.accueil-section p {
+  text-align: center;
 }
