--- a/app/views/404.ejs
+++ b/app/views/404.ejs
@@ -2,8 +2,8 @@
 
 <%- include('./partials/header-nav') %>
 
-<main class="Page404">
-  <div class="Page404-div">
+<main>
+  <div class="Page404">
     
     <h1>Oups, tu es perdu/ue ???</h1>
         
