--- a/app/public/css/contact.css
+++ b/app/public/css/contact.css
@@ -2,47 +2,45 @@
 
 .contact {
   align-items: center;
-  background-image: url(../images/accueil-v2.jpeg);
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  gap: 5em;
-  justify-content: center;
-}
-
-.contact-div {
-  align-items: center;
   background-color: aliceblue;
   border: solid black 0.5em;
-  border-radius: 2em;
   display: flex;
   flex-direction: column;
-  gap: 2em;
+  gap: 3em;
   justify-content: center;
-  padding: 2em;
-  width: 50%;
+  padding: 1em;
 }
 
-.contact-div-h1 {
-  background-color: white;
-  border: solid black 0.1em;
-  padding: 0.3em;
-}
-
-.contact-div-form {
+.contact-form {
   display: flex;
   flex-direction: column;
-  font-size: 1.5em;
   gap: 1em;
-  line-height: 2em;
   text-align: left;
 }
 
-.contact-div-p {
+.contact-form button, input, textarea {
+  align-self: center;
+  font-size: 1em;
+  font-weight: bolder;
+  padding: 0.2em;
+}
+
+.contact h1 {
+  align-self: center;
+  background-color: whitesmoke;
+  border: solid black 0.1em;
+  padding: 0.1em;
+}
+
+.contact h2 {
+  align-self: center;
+  text-decoration: underline;
+}
+
+.contact-section{
   display: flex;
   flex-direction: column;
-  font-size: 1.5em;
-  gap: 2em;
+  gap: 1em;
   line-height: 2em;
   text-align: center;
 }
