--- a/app/public/css/login.css
+++ b/app/public/css/login.css
@@ -2,34 +2,23 @@
 
 .login {
   align-items: center;
-  background-image: url(../images/accueil-v2.jpeg);
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-}
-
-.login-div {
-  align-items: center;
-  background-color: aliceblue;
+  background-color: whitesmoke;
   border: solid black 0.5em;
   border-radius: 2em;
   display: flex;
   flex-direction: column;
-  font-size: 1.5em;
   gap: 2em;
   padding: 3em;
 }
 
-.login-div-form {
+.login-form {
   display: flex;
   flex-direction: column;
   gap: 1em;
-  line-height: 2.5em;
-  text-align: left;
 }
 
-.login-div-input {
+.login-form button, input, textarea {
   align-self: center;
-  font-weight: bold;
-  padding: 0.2em;
+  font-size: 1em;
+  font-weight: bolder;
 }
