--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -9,9 +11,9 @@ html {
 }
 
 body {
-  background-color: white;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", "Arial, sans-serif";
+  font-family: 'Poppins', sans-serif;
+  height: 100vh;
+  width: 100vw;
 }
 
 a {
@@ -30,14 +32,13 @@ a {
 .container {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 13em 5em 1fr 3em;
-  height: 100vh;
-  width: 100vw;
+  grid-template-rows: 13em 7em 1fr 3em;
+  height: 100%;
 }
 
 header {
   grid-column: 1;
-  grid-row: 1 / 2;
+  grid-row: -5 / 2;
 }
 
 nav {
@@ -46,8 +47,16 @@ nav {
 }
 
 main {
+  align-items: center;
+  background-image: url(../images/accueil.webp);
+  background-size: cover;
+  background-position: initial;
   grid-column: 1;
   grid-row: 3 / 4;
+  display: flex;
+  font-size: 1.4em;
+  height: 100%;
+  justify-content: center;
 }
 
 footer {
@@ -62,13 +71,13 @@ footer {
   align-items: center;
   display: flex;
   justify-content: space-between;
-  height: 100%;
+  width: 100%;
 }
 
-.header-img {
-  height: 11em;
-  width: 11em;
-  margin: 3em;
+.header-a {
+  color: black;
+  cursor: pointer;
+  font-weight: bold;
 }
 
 .header-h1 {
@@ -80,17 +89,17 @@ footer {
   padding: 0.1em 0.7em 0.1em 0.7em;
 }
 
+.header-img {
+  height: 11em;
+  width: 11em;
+  margin: 1em;
+}
+
 .header-section{
   display: flex;
   flex-direction: column;
-  margin: 3em;
   gap: 1em;
-}
-
-.header-a {
-  color: black;
-  cursor: pointer;
-  font-weight: bold;
+  margin: 1em;
 }
 
 
@@ -102,7 +111,9 @@ footer {
   display: flex;
   height: 100%;
   justify-content: space-around;
-  padding: 1em;
+  padding: 0.5em;
+  text-align: center;
+  width: 100%;
 }
 
 .nav-a {
@@ -110,20 +121,18 @@ footer {
   border: solid 0.1em black;
   border-radius: 1em;
   color: royalblue;
-  font-size: 2em;
-  padding: 0.4em;
+  font-size: 1.7em;
+  padding: 0.3em;
   cursor: pointer;
 }
-
-
 
 /* FOOTER */
 
 .footer {
   align-items: center;
   display: flex;
-  height: 100%;
   justify-content: center;
+  width: 100%;
 }
 
 .footer-a {
@@ -132,4 +141,5 @@ footer {
   cursor: pointer;
   font-size: 1.5em;
   padding: 0.1em;
+  margin: 0.1em;
 }
