--- a/app/public/css/signup.css
+++ b/app/public/css/signup.css
@@ -2,35 +2,23 @@
 
 .signup {
   align-items: center;
-  background-image: url(../images/accueil-v2.jpeg);
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-}
-
-.signup-div {
-  align-items: center;
-  background-color: aliceblue;
+  background-color: whitesmoke;
   border: solid black 0.5em;
   border-radius: 2em;
   display: flex;
   flex-direction: column;
-  font-size: 1.5em;
   gap: 2em;
   padding: 3em;
 }
 
-.signup-div-form {
+.signup-form {
   display: flex;
   flex-direction: column;
   gap: 1em;
-  line-height: 2.5em;
-  text-align: left;
 }
 
-.signup-div-input {
+.signup-form button, input {
   align-self: center;
-  font-weight: bold;
-  padding: 0.3em;
-  width: 50%;
+  font-size: 1em;
+  font-weight: bolder;
 }
