--- a/app/public/css/transports.css
+++ b/app/public/css/transports.css
@@ -1,29 +1,29 @@
 /* MAIN -TRANSPORTS- */
 
 .transports {
-  align-items: center;
-  background-image: url(../images/accueil-v2.jpeg);
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-}
-
-.transports-div {
-  backdrop-filter: blur(1em);
+  backdrop-filter: blur(5em);
   border-radius: 1em;
-  color: aliceblue;
+  color: white;
   display: flex;
   flex-direction: column;
-  font-size: 1.5em;
-  gap: 1em;
-  padding: 1.7em;
-  -webkit-backdrop-filter: blur(1em);
+  gap: 2em;
+  padding: 1.5em;
+  -webkit-backdrop-filter: blur(5em);
 }
 
-.transports-div-h1 {
+.transports h1 {
+  font-weight: bold;
   text-align: center;
 }
 
-.transports-div-h2 {
-  text-align: center;
+.transports section {
+  line-height: 1.5em;
 }
+
+.transports p {
+  font-weight: bold;
+  line-height: 1.5em;
+  text-align: center;
+  text-decoration: underline;
+}
+
