--- a/app/views/accueil.ejs
+++ b/app/views/accueil.ejs
@@ -1,40 +1,55 @@
-<%- include('./partials/head') %>
-      
-<%- include('./partials/header-nav') %>
+<!DOCTYPE html>
 
-<main class="accueil">
-  <div class="accueil-div">
-    <h1 class="accueil-div-h1"><u>AMBULANCE X</u></h1>
-    <br>
-    <p class="accueil-div-p">
-      XX rue sans fin <br>
-      35400 SAINT-MALO <br>
-      Tel : 02.XX.XX.XX.XX. <br>
-    </p>
-    <br>
-    <p class="accueil-div-p">
-      Créée en 1982, notre <u>Société familiale Malouine</u> est fière d’être présente, <br>
-      au service des patients, <u>depuis plus de 40 ans.</u>
-    </p>
-    <br>
-    <h2 class="accueil-div-h2"> Notre équipe est constituée de : </h2>
-    <ul>
-      <li class="accueil-div-li">15 ambulanciers diplômés, à votre service et à votre écoute</li>
-      <li class="accueil-div-li">
-        2 assistants pour prendre vos rendez-vous <br>
-        et pour vous conseiller lors de vos démarches administratives</li>
-    </ul>
-    <br>
-    <p class="accueil-div-p">
-      La Société est membre du réseau de Transports Sanitaires Indépendants (TSI) <br>
-      pour répondre aux appels d'offres. <br>
-      (Article 80 de la Loi de Finance de la Sécurité Sociale)
-    </p>
-    <p class="accueil-div-p">
-      À titre d'exemple, nous effectuons les transferts Inter-établissements & Intra-établissements <br>
-      sur demande des hôpitaux de St-Malo, Cancale, Dinan, CHU de Rennes, Clinique de la Côte d'Émeraude...
-    </p>
-  </div>
-</main>
+<html lang="fr">
   
-<%- include('./partials/footer') %>
+  <%- include('./partials/head') %>
+
+  <body>
+    <div class="container">
+
+      <%- include('./partials/header-nav') %>
+      
+      <main>
+        <div class="accueil">
+
+          <h1>AMBULANCE X</h1>
+
+          <section class="accueil-section">
+            <p class="accueil-p">
+              XX rue sans fin <br>
+              35400 SAINT-MALO <br>
+              Tel : 02.XX.XX.XX.XX. <br>
+            </p>
+            <p class="accueil-p">
+              Créée en 1982, notre <u>Société familiale Malouine</u> est fière d’être présente, <br>
+              au service des patients, <u>depuis plus de 40 ans.</u>
+            </p>
+          </section>
+
+          <section class="accueil-section">
+            <h2 class="accueil-h2"> Notre équipe est constituée de : </h2>
+            <ul>
+              <li class="accueil-li">15 ambulanciers diplômés, à votre service et à votre écoute</li>
+              <li class="accueil-li">
+                2 assistants pour prendre vos rendez-vous <br>
+                et pour vous conseiller lors de vos démarches administratives</li>
+            </ul>
+            <p class="accueil-p">
+              La Société est membre du réseau de Transports Sanitaires Indépendants (TSI) <br>
+              pour répondre aux appels d'offres. <br>
+              (Article 80 de la Loi de Finance de la Sécurité Sociale)
+            </p>
+            <p class="accueil-p">
+              À titre d'exemple, nous effectuons les transferts Inter-établissements & Intra-établissements <br>
+              sur demande des hôpitaux de St-Malo, Cancale, Dinan, CHU de Rennes, Clinique de la Côte d'Émeraude...
+            </p>
+          </section>
+          
+        </div>
+      </main>
+
+      <%- include('./partials/footer') %>
+
+    </div>
+  </body> 
+</html>
