--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -1,49 +1,57 @@
-<%- include('./partials/head') %>
+<!DOCTYPE html>
 
-<%- include('./partials/header-nav') %>
+<html lang="fr">
   
-<main class="contact">
+  <%- include('./partials/head') %>
+  
+  <body>
+    <div class="container">
+      
+      <%- include('./partials/header-nav') %>
+  
+      <main>
+        <div class="contact">
+          <h1>CONTACT</h1>
+          <form class="contact-form" action="/contact" method="POST">      
+            <label>
+              Nom:
+              <input type="text" name="Nom">
+            </label>      
+            <label>
+              Prénom:
+              <input type="text" name="Prénom">
+            </label>      
+            <label>
+              Email:
+              <input type="email" name="email">
+            </label>      
+            <label>
+              Votre message:
+              <textarea name="message"></textarea>
+            </label>      
+            <button type="submit">Envoyer</button>
+          </form>
+          <section class="contact-section">
+            <h2>LE SAVIEZ-VOUS ?</h2>
+            <p class="contact-p">
+              PAR DÉCISION MINISTÉRIELLE DU 24/04/1968,<br>
+              VOUS AVEZ LE LIBRE CHOIX DE VOTRE AMBULANCIER <br>
+              EXIGEZ-LE SURTOUT LORS DE VOS ENTRÉES ET SORTIES D'HOSPITALISATION ! <br>
+              <u><b>Pour plus de renseignements :</b></u> <br>
+              Contactez-nous en priorité au :
+              <br>
+              02.XX.XX.XX.XX
+              <br>
+              Courriel :
+              <br>
+              contact@ambulanceX.com
+            </p>
+          </section>
+        </div>
+      </main>
 
-  <div class="contact-div">
-    <h1 class="contact-div-h1">LE SAVIEZ-VOUS ?</h1>
-    <p class="contact-div-p">
-      PAR DÉCISION MINISTÉRIELLE DU 24/04/1968,<br>
-      VOUS AVEZ LE LIBRE CHOIX DE VOTRE AMBULANCIER <br>
-      EXIGEZ-LE SURTOUT LORS DE VOS ENTRÉES ET SORTIES D'HOSPITALISATION !
-      <u><b>Pour plus de renseignements :</b></u>
-      Contactez-nous en priorité au :
-      <br>
-      02.XX.XX.XX.XX
-      <br>
-      Courriel :
-      <br>
-      contact@ambulanceX.com
-    </p>
-  </div>
-
-  <div class="contact-div">
-    <h1 class="contact-div-h1">CONTACT</h1>
-    <form class="contact-div-form" action="/contact" method="POST">      
-      <label>
-        Nom:
-        <input type="text" name="Nom">
-      </label>      
-      <label>
-        Prénom:
-        <input type="text" name="Prénom">
-      </label>      
-      <label>
-        Email:
-        <input type="email" name="email">
-      </label>      
-      <label>
-        Votre message:
-        <textarea name="message"></textarea>
-      </label>      
-      <button type="submit">Envoyer</button>
-    </form>
-  </div>
-
-</main>
-
-<%- include('./partials/footer') %>
+      <%- include('./partials/footer') %>
+    
+    </div>
+  </body>
+</html>
