--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,28 +1,33 @@
-<%- include('./partials/head') %>
+<!DOCTYPE html>
 
-<%- include('./partials/header-nav') %>
-
-<main class="login">
-  <div class="login-div">
-
-    <h1><u>Connexion</u></h1>
-
-    <form class="login-div-form" action="/login" method="post">
+<html lang="fr">
+  
+  <%- include('./partials/head') %>
+  
+  <body>
+    <div class="container">
       
-      <label for="email">
-        Email:
-        <input type="email" id="email" name="email" required>
-      </label>
-      <label for="password">
-        Password: 
-        <input type="password" id="password" name="password" required>
-      </label>
+      <%- include('./partials/header-nav') %>
       
-      <input class="login-div-input" type="submit" value="Valider">
-       
-    </form>
+      <main>
+        <div class="login">
+          <h1>CONNEXION</h1>
+          <form class="login-form" action="/login" method="post">
+            <label for="email">
+              Email:
+              <input type="email" id="email" name="email" required>
+            </label>
+            <label for="password">
+              Password: 
+              <input type="password" id="password" name="password" required>
+            </label>
+            <input class="login-input" type="submit" value="Valider">
+          </form>
+        </div>
+      </main>
 
-  </div>
-</main>
+      <%- include('./partials/footer') %>
 
-<%- include('./partials/footer') %>
+    </div>
+  </body>
+</html>
