--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,6 +1,12 @@
-<footer>
-  <div class="footer">
-    <a class="footer-a" href="/mentions">MENTIONS LÉGALES</a>
-  </div>
-</footer>
+      <footer>
+        <div class="footer">
+          <a class="footer-a" href="/mentions">MENTIONS LÉGALES</a>
+        </div>
+      </footer>
+
+    </div>
+
+  </body>
+   
+</html>
     
