--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -20,9 +20,13 @@ a {
   text-decoration: none;
 }
 
-.alert {
+.error {
+  background-color: white;
+  border: solid red 0.3em;
   color: red;
-  font-size: 3em;
+  font-size: 1.5em;
+  font-weight: bold;
+  padding: 0.3em;
 }
 
 
@@ -73,13 +77,11 @@ footer {
   justify-content: space-between;
   width: 100%;
 }
-
 .header-a {
   color: black;
   cursor: pointer;
   font-weight: bold;
 }
-
 .header-h1 {
   background-color: royalblue;
   border: solid 0.1em black;
@@ -88,13 +90,11 @@ footer {
   font-size: 6em;
   padding: 0.1em 0.7em 0.1em 0.7em;
 }
-
 .header-img {
   height: 11em;
   width: 11em;
   margin: 1em;
 }
-
 .header-section{
   display: flex;
   flex-direction: column;
