--- a/app/views/vehicules.ejs
+++ b/app/views/vehicules.ejs
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 
 <html lang="fr">
-  
-  <%- include('./partials/head') %>
+
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/<%= cssFile %>">
+    <link rel="stylesheet" href="/css/mediaqueries.css">
+    <title>
+      <%= pageTitle %>
+    </title>
+  </head>
+
   <body>
-    <div class="container">
-      
-      <%- include('./partials/header-nav') %>
-      
+    <div class="container"> 
+      <header>
+        <div class="header">
+          <img class="header-img" src="images/caduceeAmbulancier.webp" alt="Caducée Ambulancier">
+          <h1 class="header-h1">Ambulance X</h1>
+          <section class="header-section">
+            <a class="header-a" href="/login">S'identifier</a>
+            <a class="header-a" href="/signup">S'enregistrer</a>
+          </section>
+        </div>
+      </header>
+      <nav>
+        <div class="nav">
+          <a class="nav-a" href="/">Accueil</a>
+          <a class="nav-a" href="/transports">Transports</a>
+          <a class="nav-a" href="/vehicules">Véhicules</a>
+          <a class="nav-a" href="/contact">Contact</a>
+        </div>
+      </nav>
       <main>
         <div class="vehicules">
           <div class="vehicules-slide">
@@ -15,10 +40,14 @@
           </div>
         </div>
       </main>
-      
-      <%- include('./partials/footer') %>
-      
+      <footer>
+        <div class="footer">
+          <a class="footer-a" href="/mentions">MENTIONS LÉGALES</a>
+        </div>
+      </footer>
     </div>
+
     <script src="js/slide.js"></script>
+
   </body>
 </html>
